Fixed footer CSS. Fixed #title CSS on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -474,11 +474,9 @@ button[disabled] {
 
 /*Footer*/
 #footer {
-    height: var(--footer-height);
+    min-height: var(--footer-height);
     border-top: 1px solid #ddd;
-    padding-top: 8px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 8px 40px;
 }
 .footer-text {
     text-align: center;
